<resources>
    <string name="app_name">i.am</string>
    <string name="facebook_app_id">214854450396015</string>
    <string name="fb_login_protocol_scheme">fb214854450396015</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="dont_have_account">Don\'t Have An Account? </string>
    <string name="login">Login</string>
    <string name="login_with_social_media">Login with social media</string>
    <string name="signUp">Sign Up</string>
    <string name="create_an_account">Create An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="sign_up_with_social_media">Sign Up with social media</string>
    <string name="have_already_account">Have already account? </string>
    <string name="enter_correct_email">Enter Email in a Correct Format</string>
    <string name="password_mismatch">Password Not Consistent</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dummy_paragraph">
        Lorem Ipsum is simply dummy text of the printing
        and typesetting industry. Lorem Ipsum has been the
        industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and
        scrambled
    </string>
    <string name="username">Username</string>
    <string name="sample_email">johndoe@email.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_handle">/@johndoe</string>
    <string name="change_picture">Change Picture</string>
    <string name="sample_password">******</string>
    <string name="save_changes">Save Changes</string>
    <string name="title">Title</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="sample_post_title">Check out my new website</string>
    <string name="sample_post_time">9 mins ago</string>
    <string name="feed">Feed</string>
    <string name="add_friend">Add Friend</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message...</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="sample_username">George V</string>
    <string name="sample_notification_time">7:45 PM</string>
    <string name="notifications">Notifications</string>
    <string name="send_email">Send Email</string>
    <string name="confirm">Confirm</string>
    <string name="show_password">Show Password</string>
    <string name="enter_bio">Enter User Bio</string>
    <string name="bio">Bio</string>
    <string name="profile">Profile</string>
    <string name="sample_unread_messages_count">14</string>
    <string name="warning_max_length_bio">Bio max limit is %d characters</string>
</resources>