<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="16dp">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toStartOf="@+id/tvTime"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePic"
        tools:text="@string/sample_username" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_notification_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_light"
        android:paddingHorizontal="16dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gray_bg"
        android:paddingHorizontal="16dp"
        android:text="@string/decline"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAccept" />

</androidx.constraintlayout.widget.ConstraintLayout>